--- a/.eslintrc
+++ b/.eslintrc
@@ -8,11 +8,11 @@
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    // to enforce using type for object type definitions, can be type or interface 
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"], 
+    // to enforce using type for object type definitions, can be type or interface
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
   },
   "env": {
     "browser": true,
     "es2021": true
-  },
+  }
 }
