--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "dataclass": "^2.1.0"
   }
 }
